# pico-targets

./: .gitignore  .gitmodules  README.md
aes-dfa/: CMakeLists.txt  test_aes.c
aes-dfa/python/: control.py  phoenixaes_recover.py  phoenixaes_recover2.py  simpleserial.py
aes-dfa/qiling-fisim/: README.md  dfa-plots.ipynb  extract_outbufs.py  phoenixaes_recover.py  requirements.txt  sim.py  verify_data.py
aes-dfa/rust/helloworld/: Cargo.toml
aes-dfa/rust/helloworld/src/: main.rs
picoemp-realtime-trigger/: CMakeLists.txt  README.md  basic_trigger.pio  hello.pio  pio_trigger_programs.c  test_trigger_pio.c  trigger_basic.pio
random-bits/: CMakeLists.txt  randombits.c
random-bits/notebooks/: randomplots.ipynb  requirements.txt
simple-loop/: CMakeLists.txt  README.md  simple_loop.c
simple-loop/python/: control.py
